[project]
name = "pctalks-fast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "jinja2>=3.1.5",
    "pandas>=2.2.3",
    "pyreadr>=0.5.2",
    "python-fasthtml>=0.12.1",
    "uvicorn>=0.34.0",
]
